Fix mockup image component on safari.

--- a/client/src/components/ImageGrid.scss
+++ b/client/src/components/ImageGrid.scss
@@ -38,47 +38,12 @@
         .masonry-image {
           display: grid;
           grid-template: 100% / 100%;
-          img {
+          & > * {
             grid-area: 1 / 1 / 1 / 1;
-          }
-          .loading {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: linear-gradient(
-              135deg,
-              rgba(1, 164, 164, 0.75),
-              rgba(1, 37, 37, 0.25)
-            );
-            background-size: 400% 400%;
-            color: white;
-            animation: LoadingBackground 2s ease infinite;
-            .text {
-              margin-top: 64px;
-            }
           }
         }
         img {
           width: 100%;
-        }
-        .button {
-          position: absolute;
-          width: 100%;
-          bottom: 0;
-          right: 0;
-          text-align: center;
-          opacity: 0;
-          transition: opacity 0.35s ease;
-          border-radius: 0;
-        }
-        &:hover .button {
-          opacity: 1;
-          text-decoration: none;
         }
       }
     }
